# LEAP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
docs/: architecture.md  benchmarking.md  build-system.md  exporter.md  inference-engine.md  kernel-module.md  model-library.md  tokenizer.md  transport.md
scripts/: benchmark.py
src/export/: Export.cpp  Export.h  Loader.cpp  Loader.h  Utils.cpp  Utils.h  main.cpp
src/inference/: Config.h  FloatTransformer.cpp  FloatTransformer.h  KernelTransport.cpp  KernelTransport.h  QuantizedTransformer.cpp  QuantizedTransformer.h  Sampler.cpp  Sampler.h  SystemMonitor.cpp  SystemMonitor.h  TcpTransport.cpp  TcpTransport.h  Tokenizer.cpp  Tokenizer.h  Transformer.h  TransformerFactory.cpp  Transport.h  UdpTransport.cpp  UdpTransport.h  Utils.h  main.cpp
src/kernel/: Makefile  leap_module.c  leap_protocol.h
src/model/: Attention.cpp  Attention.h  FeedForward.cpp  FeedForward.h  ModelArgs.h  RMSNorm.cpp  RMSNorm.h  Transformer.cpp  Transformer.h  TransformerBlock.cpp  TransformerBlock.h  Utils.cpp  Utils.h
src/tokenizer/: Tokenizer.cpp  Tokenizer.h  main.cpp
